--- a/index.html
+++ b/index.html
@@ -21,10 +21,18 @@
       border: 1px solid #ccc;
       border-radius: 8px;
       padding: 10px;
-      width: 45%;
+      flex: 1 1 calc(50% - 20px);
+      max-width: calc(50% - 20px);
       min-width: 140px;
       text-align: center;
       position: relative;
+      box-sizing: border-box;
+    }
+    @media (max-width: 480px) {
+      .produto {
+        flex: 1 1 calc(50% - 10px);
+        max-width: calc(50% - 10px);
+      }
     }
     .btn-produto {
       font-size: 14px;
